test/datalog_tests/rules.fail.dl
// cannot use parenthes if type name does not match relation name

input relation R1: int

R1(1).

//---

// relation name collides with existing type name

typedef R1 = int

input relation R1(a1: string)

//---

// non-stratified negation

input relation R1(a1: string)

relation R2(a2: string)
relation R3(a3: string, b3: string)

R2(x) :- R1(x), not R3(x, "foo").
R3(x,"foo") :- R2(x).


